# example-NextLargest

./: .gitignore  README.md  nextLargest.cabal
app/: Main.hs
src/: NextLargest.hs
