name:                example-NextLargest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SFrijters/example-NextLargest
license:             BSD3
license-file:        LICENSE
author:              Stefan Frijters
maintainer:          sfrijters@gmail.com
copyright:           2017 Stefan Frijters
category:            Example
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NextLargest
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable nextLargest
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nextLargest
                     , QuickCheck
                     , criterion
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SFrijters/example-NextLargest
